.infra/production/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      nodeSelector:
        node-role: local
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: site
          image: ghcr.io/techtail/gio-site:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  selector:
    app: site
  ports:
    - port: 80
      targetPort: 80
