.infra/production/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gio-site
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gio.pet`) || Host(`www.gio.pet`)
      kind: Rule
      services:
        - name: site
          port: 80
  tls:
    secretName: gio-site-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gio-site-http-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gio.pet`) || Host(`www.gio.pet`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: site
          port: 80

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
